update role paging
